fixed JDK 24 & Maven incompatibility issue.