@@ -5,6 +5,7 @@
     <artifactId>MotorPHSystem</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
     <repositories>
         <repository>
             <id>unknown-jars-temp-repo</id>
@@ -12,6 +13,7 @@
             <url>file:${project.basedir}/lib</url>
         </repository>
     </repositories>
+
     <dependencies>
          <!-- MySQL Connector/J Dependency -->
         <dependency>
@@ -56,10 +58,12 @@
             <version>6.21.0</version>
         </dependency>
     </dependencies>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>23</maven.compiler.release>
     </properties>
+    
     <build>
     <plugins>
         <plugin>
@@ -70,16 +74,18 @@
                 <mainClass>com.cjme.motorphsystem.Main</mainClass>
             </configuration>
         </plugin>
+        
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
+        <version>3.13.0</version>
         <configuration>
           <compilerArgs>
-            <arg>--enable-preview</arg>
+              <release>${maven.compiler.release}</release>
           </compilerArgs>
         </configuration>
       </plugin>
+      
     </plugins>
     </build>
 
